replaced guava Immutable collections with jdk collections
This is the breaking part of the migration. Public signatures widen from
ImmutableMap/ImmutableList to Map/List, which is binary-incompatible - the erased
return type changes - and source-breaking for anyone implementing HttpMessage,
HttpRequest, Content or SettingFetcher, or assigning getHeaders() to an
ImmutableMap variable.

Map.of and Map.copyOf are deliberately avoided on header, query, form, cookie and
template-variable paths. They randomise iteration order once per JVM run, and
those maps are rendered in iteration order. This was not theoretical: converting
HttpRequestDumperTest.should_dump_queries to Map.of made it pass or fail
depending on the run. It now builds a LinkedHashMap, and a companion test asserts
that header and query order survives. The suite was run four times in fresh JVMs
to confirm nothing else is salt-dependent.

Static lookup tables that are only ever read by key keep Map.of / Map.ofEntries,
since order genuinely does not matter there.

List.copyOf takes a Collection where ImmutableList.copyOf accepted any Iterable,
so CollectionHandler streams instead, and mount() uses List.of on its varargs
array.

Test helpers take List<Map.Entry<String, String>> rather than a Map, because some
tests deliberately send a repeated header name - of("foo", "bar", "foo", "bar2") -
which Map.of rejects.