@@ -1,10 +1,9 @@
 package com.github.dreamhead.moco;
 
+import com.github.dreamhead.moco.helper.RequestHeaders;
 import com.github.dreamhead.moco.util.HttpHeaders;
 import com.github.dreamhead.moco.util.Jsons;
 import com.github.dreamhead.moco.util.MediaType;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMultimap;
 import org.apache.hc.core5.http.ClassicHttpResponse;
 import org.apache.hc.core5.http.HttpEntity;
 import org.apache.hc.core5.http.HttpResponse;
@@ -45,7 +44,7 @@ import static com.github.dreamhead.moco.MocoRest.restServer;
 import static com.github.dreamhead.moco.Runner.running;
 import static com.github.dreamhead.moco.helper.RemoteTestUtils.port;
 import static com.github.dreamhead.moco.helper.RemoteTestUtils.remoteUrl;
-import static com.google.common.collect.ImmutableMultimap.of;
+import static com.github.dreamhead.moco.helper.RequestHeaders.of;
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -94,7 +93,7 @@ public class MocoRestTest extends BaseMocoHttpTest<RestServer> {
         resource2.message = "world";
 
         server.resource("targets",
-                get().response(json(ImmutableList.of(resource1, resource2)))
+                get().response(json(List.of(resource1, resource2)))
         );
 
         running(server, () -> {
@@ -238,7 +237,7 @@ public class MocoRestTest extends BaseMocoHttpTest<RestServer> {
         resource2.message = "world";
 
         server.resource("targets",
-                get().request(eq(query("foo"), "bar")).response(json(ImmutableList.of(resource1, resource2)))
+                get().request(eq(query("foo"), "bar")).response(json(List.of(resource1, resource2)))
         );
 
         running(server, () -> {
@@ -458,7 +457,7 @@ public class MocoRestTest extends BaseMocoHttpTest<RestServer> {
 
         running(server, () -> {
             HttpResponse httpResponse = helper.deleteForResponseWithHeaders(remoteUrl("/targets/1"),
-                    ImmutableMultimap.of(HttpHeaders.IF_MATCH, "moco"));
+                    RequestHeaders.of(HttpHeaders.IF_MATCH, "moco"));
             assertThat(httpResponse.getCode(), is(200));
         });
     }
